Refactor user API endpoint to return a list of users from CSV with updated Swagger documentation and response schema
